force-app/main/default/objects/CustomerAnnouncement__c/CustomerAnnouncement__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Junction Object to create Announcement records to Accounts based on Announcement creation criteria like Generic, Product and Entitlement</description>
    <label>Announcement</label>
    <nameField>
        <label>Announcement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>