force-app/main/default/objects/CustomerAnnouncement__c/fields/Account_Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Region__c</fullName>
    <formula>Account__r.Billing_Region_Text__c</formula>
    <label>Account Billing Region</label>
    <type>Text</type>
</CustomField>