force-app/main/default/objects/CustomerAnnouncement__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <label>Announcement</label>
    <referenceTo>Announcement__c</referenceTo>
    <relationshipLabel>Announcements</relationshipLabel>
    <relationshipName>Announcements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>