force-app/main/default/objects/CustomerAnnouncement__c/fields/Announcement_Type__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Type__c</fullName>
    <formula>TEXT(Announcement__r.Announcement_Type__c)</formula>
    <label>Announcement Type</label>
    <type>Text</type>
</CustomField>