force-app/main/default/objects/CustomerAnnouncement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Age__c</columns>
    <columns>Announcement__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>NVIDIA HAS IDENTIFIED AN ISSUE WITH THE 1.05.07 BMC FW</value>
    </filters>
    <label>All</label>
</ListView>