force-app/main/default/objects/CustomerAnnouncement__c/listViews/All_Announcements_Communities_View.listView-meta.xml
<ListView>
    <fullName>All_Announcements_Communities_View</fullName>
    <columns>Age__c</columns>
    <columns>Announcement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Announcements</label>
</ListView>