force-app/main/default/objects/CustomerAnnouncement__c/listViews/Critical_Announcements.listView-meta.xml
<ListView>
    <fullName>Critical_Announcements</fullName>
    <columns>Age__c</columns>
    <columns>Announcement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Announcement_Type__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Critical Announcements</label>
    <language>en_US</language>
</ListView>