force-app/main/default/objects/CustomerAnnouncement__c/listViews/Latest_Announcements.listView-meta.xml
<ListView>
    <fullName>Latest_Announcements</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>Age__c</columns>
    <columns>Announcement__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Announcement_Type__c</field>
        <operation>equals</operation>
        <value>Latest</value>
    </filters>
    <filters>
        <field>Announcement_Type__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Latest Announcements</label>
    <language>en_US</language>
</ListView>